--- a/index.html
+++ b/index.html
@@ -1,1 +1,64 @@
-<h1>Ini cerita kami semua</h1>
+<!DOCTYPE html>
+<html lang="id">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portofolio Saya</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+</head>
+<body>
+    <header>
+        <div class="container">
+            <h1>Nama Anda</h1>
+            <p>Deskripsi Singkat: Web Developer | Designer | Freelancer</p>
+            <nav>
+                <ul>
+                    <li><a href="#about">Tentang Saya</a></li>
+                    <li><a href="#projects">Proyek</a></li>
+                    <li><a href="#contact">Kontak</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+    <section id="about">
+        <div class="container">
+            <h2>Tentang Saya</h2>
+            <p>Saya adalah seorang pengembang web dengan pengalaman dalam menciptakan situs web yang responsif dan menarik. Saya memiliki keahlian dalam HTML, CSS, JavaScript, dan berbagai framework modern.</p>
+        </div>
+    </section>
+
+    <section id="projects">
+        <div class="container">
+            <h2>Proyek</h2>
+            <div class="project">
+                <h3>Proyek 1</h3>
+                <p>Deskripsi singkat tentang proyek ini. Teknologi yang digunakan: HTML, CSS, JavaScript.</p>
+            </div>
+            <div class="project">
+                <h3>Proyek 2</h3>
+                <p>Deskripsi singkat tentang proyek ini. Teknologi yang digunakan: React, Node.js.</p>
+            </div>
+            <!-- Tambahkan lebih banyak proyek sesuai kebutuhan -->
+        </div>
+    </section>
+
+    <section id="contact">
+        <div class="container">
+            <h2>Kontak</h2>
+            <p>Jika Anda ingin menghubungi saya, silakan kirim email ke: <a href="mailto:imade.novandy23@gmail.com">emailanda@example.com</a></p>
+        </div>
+    </section>
+
+    <footer>
+        <div class="container">
+            <p>&copy; 2024 Nama Anda. Semua hak dilindungi.</p>
+        </div>
+    </footer>
+
+    <!-- Tambahkan script JS jika diperlukan -->
+</body>
+</html>
