change brutally everything, i wont use ai for this

--- a/home.html
+++ b/home.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Novandy Asardi</title>
     <link rel="stylesheet" href="style.css">
+</head>
 <body>
     <nav class="nav">
             <ul>
@@ -15,10 +16,8 @@
             </ul>
         </div>
     </nav>
-    <p>welcome page</p>
-    <h1>Welcome to My Page!</h1>
-    <form action="/home.html">  
-        <input type="submit" value="Proceed to My Website"/>
-    </form>
+    <p>main page</p>
+    <h1>Novandy Asardi</h1>
+    <div>a man who interested in website-making, game-development, anime-style drawing, random music listener. Novandy wants to create something big and impactful to the world.</div>
 </body>
 </html>
