--- a/blog.html
+++ b/blog.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Novandy Asardi</title>
     <link rel="stylesheet" href="style.css">
+</head>
 <body>
     <nav class="nav">
             <ul>
@@ -15,10 +16,6 @@
             </ul>
         </div>
     </nav>
-    <p>welcome page</p>
-    <h1>Welcome to My Page!</h1>
-    <form action="/home.html">  
-        <input type="submit" value="Proceed to My Website"/>
-    </form>
+    <p>blog page</p>
 </body>
 </html>
