--- a/resume.html
+++ b/resume.html
@@ -15,10 +15,11 @@
             </ul>
         </div>
     </nav>
-    <p>welcome page</p>
-    <h1>Welcome to My Page!</h1>
-    <form action="/home.html">  
-        <input type="submit" value="Proceed to My Website"/>
-    </form>
+    <p>resume page</p>
+    <h1>Experience</h1>
+    <p>experienced in nothing</p>
+    <h1>Education</h1>
+    <p>Bachelor of Computer Science | Trisakti University | 2025</p>
+    <p>Informatics Engineering - GPA 3.67</p>
 </body>
 </html>
