--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <form action="/home.html">  
         <input type="submit" value="Proceed to My Website"/>
     </form>
-    <form action "/testAll.html"
+    <form action="/testAll.html"
         <input type="submit" value="Test Page"/>
     </form>
 </body>
